[SQL-2047] Enable dropping connector options in ServiceTasks